# max-xtract-pipeline

./: Test.py  app.py  ask_gpt.py  batch_debug_retry.py  batch_gpt_parse.py  check_mismatches_links.py  clause_upload_log.txt  clauses_cleaned.json  deduplicate_clauses.py  deduplicate_supabase_clauses.py  document_links.json  document_to_precedence_level.json  dry_run_check.py  extract_clauses_from_pdf.py  extract_pages.py  hoa_clauses_cleaned.json  main.py  pages.json  precedence_map_extension.json  pyproject.toml  qa_check_clauses.py  qa_check_supabase.py  readme.md  reembed_clauses.py  repair_critical_fields.py  repair_links_supabase.py  repair_missing_fields.py  repair_missing_fields_v3.py  run_all.py  tag_precedence_level.py  test_single_doc.py  test_summary_query.py  test_supabase.py  update_links.py  upload_clauses.py  validate_links.py  verify_supabase_schema.py
logs/: 1Second_Amendment_to_the_Declaration_of_Covenants,_Conditions_and_Restrictions_11-08-2005.md  1Supplemental_Amendment_to_the_Declaration_of_Covenants,_Conditions_&_Restrictions_-_Sec_2_-_(Waller_Cty_10-4-2004).md  2022_Recorded_Adopting_Governing_Documents_Enforcement_Process_and_Fine_Policies_(Waller).md  Amendment_to_DCC&R_-_11.04.19.md  Articles_of_Incorporation_-_Waller_-_3-26-18.md  ByLaws_-_PLCA_-_10-19-2004.md  Declaration_of_Covenants,_Conditions,_&_Restrictions_-_09-17-2004.md  First_Amendment_to_the_Declaration_of_Covenants,_Conditions_&_Restrictions_-_10-05-2004.md  PLCA_-_Articles_of_Incorporation_-_Grimes_-_3-26-18.md  PLCA_Builders_Guidelines_revised_3.2020.md  (+10 more)
